welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: not found: value estsurBiscuit
while (!estsurBiscuit()){
        ^